force-app/main/default/objects/Order_Header__c/fields/AMS_Info_Last_Updated__c.field-meta.xml
<CustomField>
    <fullName>AMS_Info_Last_Updated__c</fullName>
    <label>AMS Info Last Updated</label>
    <type>DateTime</type>
</CustomField>