force-app/main/default/objects/Order_Header__c/fields/Appliance_Model__c.field-meta.xml
<CustomField>
    <fullName>Appliance_Model__c</fullName>
    <label>Appliance Model</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>MODEL_3_110</fullName>
            </value>
            <value>
                <fullName>MODEL_3_230</fullName>
            </value>
            <value>
                <fullName>MODEL_3_440</fullName>
            </value>
            <value>
                <fullName>MODEL_VMWARE</fullName>
            </value>
            <value>
                <fullName>MODEL_HYPERV</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>