force-app/main/default/objects/Order_Header__c/fields/Cloud_Location__c.field-meta.xml
<CustomField>
    <fullName>Cloud_Location__c</fullName>
    <label>Cloud Location</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>US</fullName>
            </value>
            <value>
                <fullName>EU</fullName>
            </value>
            <value>
                <fullName>APAC</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>