force-app/main/default/objects/Order_Header__c/fields/Contract__c.field-meta.xml
<CustomField>
    <fullName>Contract__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contract</label>
    <referenceTo>Contract</referenceTo>
    <relationshipName>R00N50000001PpPCEA0</relationshipName>
    <type>Lookup</type>
</CustomField>