force-app/main/default/objects/Order_Header__c/fields/Contract_Product_Component__c.field-meta.xml
<CustomField>
    <fullName>Contract_Product_Component__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Reference to contract product component that this was generated for</description>
    <label>Contract Component Line</label>
    <referenceTo>Contract_Product_Component__c</referenceTo>
    <relationshipName>R00N50000001QqLlEAK</relationshipName>
    <type>Lookup</type>
</CustomField>