force-app/main/default/objects/Order_Header__c/fields/IIS_package__c.field-meta.xml
<CustomField>
    <fullName>IIS_package__c</fullName>
    <label>Boomi tier</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Integrate Customer - Tier A</fullName>
            </value>
            <value>
                <fullName>Integrate Customer - Tier B</fullName>
            </value>
            <value>
                <fullName>Integrate Customer - Tier C</fullName>
            </value>
            <value>
                <fullName>Non-Integrate Customer - Tier A</fullName>
            </value>
            <value>
                <fullName>Non-Integrate Customer - Tier B</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>