force-app/main/default/objects/Order_Header__c/fields/Notes__c.field-meta.xml
<CustomField>
    <fullName>Notes__c</fullName>
    <description>help ensure that items like non-standard cloud hosting locations are flagged for them when delivering the software to the Customer.</description>
    <label>Notes</label>
    <type>TextArea</type>
</CustomField>