force-app/main/default/objects/Order_Header__c/fields/Replacement_Value__c.field-meta.xml
<CustomField>
    <fullName>Replacement_Value__c</fullName>
    <label>Replacement Value</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>