force-app/main/default/objects/Order_Header__c/fields/Requested_Ship_Date__c.field-meta.xml
<CustomField>
    <fullName>Requested_Ship_Date__c</fullName>
    <defaultValue>TODAY()</defaultValue>
    <description>Date which we have been requested to ship the appliance</description>
    <label>Requested Ship Date</label>
    <type>Date</type>
</CustomField>