force-app/main/default/objects/Order_Header__c/fields/Shipper__c.field-meta.xml
<CustomField>
    <fullName>Shipper__c</fullName>
    <label>Shipper</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>DHL</fullName>
            </value>
            <value>
                <fullName>FEDEX</fullName>
            </value>
            <value>
                <fullName>UPS</fullName>
            </value>
            <value>
                <fullName>Royal Mail</fullName>
            </value>
            <value>
                <fullName>Download</fullName>
                <default>true</default>
                <label>Download</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>