force-app/main/default/objects/Order_Header__c/fields/SystemLog__c.field-meta.xml
<CustomField>
    <fullName>SystemLog__c</fullName>
    <label>SystemLog</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>