force-app/main/default/objects/Order_Header__c/fields/Tech_Contact__c.field-meta.xml
<CustomField>
    <fullName>Tech_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Technical contact who will be responsible for the physical management of this appliance</description>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Order Headers</relationshipLabel>
    <relationshipName>R00N50000001PpixEAC</relationshipName>
    <type>Lookup</type>
</CustomField>