force-app/main/default/objects/Order_Header__c/listViews/OrdersAll.listView-meta.xml
<ListView>
    <fullName>OrdersAll</fullName>
    <columns>NAME</columns>
    <columns>Account__c</columns>
    <columns>Description__c</columns>
    <columns>RECORDTYPE</columns>
    <columns>Product_Component__c</columns>
    <columns>UPDATEDBY_USER</columns>
    <columns>UPDATEDBY_USER.ALIAS</columns>
    <columns>Order_System_Status__c</columns>
    <columns>Appliance_Serial_Number__c</columns>
    <columns>AMSIdofAppliance__c</columns>
    <columns>Tracking_Number__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>Orders: All</label>
</ListView>